View Issue Details

IDProjectCategoryView StatusLast Update
0022846Open CASCADEOCCT:Modeling Algorithmspublic2012-03-29 17:26
ReporteramaAssigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformWindows 
Product Version6.5.2 
Target Version6.5.3Fixed in Version6.5.3 
Summary0022846: Following from issue 0022804 (regression on test case)
DescriptionRegression on test case chl/917/A7
checkshape is bad because after sewing tolerance of is vertex increased greatly
TagsNo tags attached.
Test case numberchl 917 A7

Relationships

child of 0022804 closedbugmaster Sewing increases tolerance of vertices for redundant value. 

Activities

ama

2011-12-15 15:03

developer   ~0018861

Last edited: 2011-12-19 16:02

SVN branch http://svn/svn/occt/branches/OCC22846 (revision 9805) is ready to be reviewed

gka

2011-12-22 11:42

developer   ~0018941

It will be better to add boolean flag defining that minimal tolerance was specified and use it instead of lines (for double values it is dangerous)

if (!aMinTol)
    aMinTol = aTol*1e-4;

2. It is necessary to merge branch wit trunk:

file IFSelect_WorkSession.cxx

mkv

2011-12-23 17:11

tester   ~0018973

Dear BugMaster,
Workbench KAS:dev:mkv-22846-occt was created from SVN branch http://svn/svn/occt/branches/OCC22846
(and mkv-22846-products from trunk) and compiled on Linux platform.

Test case for this bug is chl/917/A7. It is OK.

There are following differences/regressions in mkv-22846-products regarding to KAS:dev:products-21111216-opt
chl 934 F6 K7 K8 K9

See results in /QADisk/occttests/results/KAS/dev/mkv-22846-products_22122011/lin
See reference results in /QADisk/occttests/results/KAS/dev/products-20111216-opt_17122011/lin
See test cases in /QADisk/occttests/tests/ED
N.B. In order to launch testing case you can make use the following instructions
http://doc/doku.php?id=occt:certification

ama

2011-12-27 12:10

developer   ~0019011

Dear Galina,
Differences in test cases chl 934 F6 K7 K8 K9 in mkv-22846-products regarding to KAS:dev:products-21111216-opt are not regressions.

SVN branch http://svn/svn/occt/branches/OCC22846 is ready.

ama

2011-12-27 12:35

developer   ~0019013

Dear BugMaster,
It is necessary to update the following test scripts:
chl 934 F6
chl 934 K7
chl 934 K8
chl 934 K9

so that the result, obtained in mkv-22846-products, considered a valid.

bugmaster

2011-12-29 15:42

administrator   ~0019051

Integrated into trunk of occt repository

Date: 2011-12-29 15:34:34 +0400 (Thu, 29 Dec 2011)
New Revision: 9955

Modified:
   trunk/src/BRepTest/BRepTest_SurfaceCommands.cxx

Related Changesets

occt: master dc161d81

2011-12-29 11:34:34

ama


Committer: bugmaster Details Diff
0022846: Following from issue 0022804 (regression on test case) Affected Issues
0022846
mod - src/BRepTest/BRepTest_SurfaceCommands.cxx Diff File

Issue History

Date Modified Username Field Change
2011-12-15 12:20 ama New Issue
2011-12-15 12:20 ama Assigned To => ama
2011-12-15 12:22 ama Status new => assigned
2011-12-15 13:34 ama Relationship added child of 0022804
2011-12-15 13:36 ama Summary Following from issue 0022804: Sewing increases tolerance of vertices for redundant value. => Following from issue 0022804 (regression on test case)
2011-12-15 15:03 ama Note Added: 0018861
2011-12-15 15:08 ama Status assigned => resolved
2011-12-15 15:09 ama Assigned To ama => gka
2011-12-19 16:02 ama Note Edited: 0018861
2011-12-22 11:42 gka Note Added: 0018941
2011-12-22 11:42 gka Assigned To gka => ama
2011-12-22 11:42 gka Status resolved => reviewed
2011-12-23 14:33 ama Status reviewed => assigned
2011-12-23 15:22 ama Status assigned => resolved
2011-12-23 15:23 ama Assigned To ama => gka
2011-12-23 15:38 mkv Test case number => chl 917 A7
2011-12-23 17:11 mkv Note Added: 0018973
2011-12-23 17:11 mkv Assigned To gka => ama
2011-12-23 17:11 mkv Status resolved => assigned
2011-12-27 12:10 ama Note Added: 0019011
2011-12-27 12:11 ama Status assigned => resolved
2011-12-27 12:35 ama Note Added: 0019013
2011-12-27 12:39 abv Status resolved => reviewed
2011-12-27 12:39 abv Status reviewed => tested
2011-12-29 15:42 bugmaster Note Added: 0019051
2011-12-29 15:42 bugmaster Status tested => verified
2011-12-29 15:42 bugmaster Resolution open => fixed
2012-03-29 17:26 bugmaster Changeset attached => occt master dc161d81