0022846: Following from issue 0022804 (regression on test case)